--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,13 +3,13 @@
     <string name="title_activity_settings">Settings</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_title">World Bank Open Data</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_plot">PlotActivity</string>
     <string name="welcome">Welcome to</string>
-    <string name="app_title">World Bank Open Data App</string>
+    <string name="app_title">World Bank Open Data</string>
     <string name="app_description">This app allows you to browse through various data/statistics and view, graphically, the changes over the years</string>
     <string name="title_activity_main">MainActivity</string>
 
@@ -31,7 +31,21 @@
     <!-- Sync Preferences -->
     <string name="sync_title">Sync email periodically</string>
     <string name="attachment_title">Download incoming attachments</string>
-    <string name="attachment_summary_on">Automatically download attachments for incoming emails
-    </string>
+    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
     <string name="attachment_summary_off">Only download attachments when manually requested</string>
+    <string name="choose_info"><![CDATA[(click here for info)\nBy choosing \'Country —> Argument —> Indicator\', you can request a specific indicator starting from the country of interest\n(e.g. Italy —> Economy —> GDP)\n\nBy choosing \'Argument —> Indicator —> Country\', you can request a specific indicator starting from the argument of interest and ending with the country\n(e.g. Economy -> GDP -> Italy)]]></string>
+    <string name="english">English</string>
+    <string name="italian">Italian</string>
+    <string name="language">Language</string>
+    <string name="def_lang">Default language</string>
+    <string name="dark_mode">Dark mode</string>
+    <string name="storage">Storage</string>
+    <string name="del_after">Delete stored statistics after</string>
+    <string name="one_day">1 day</string>
+    <string name="three_days">3 days</string>
+    <string name="seven_days">7 days</string>
+    <string name="one_month">1 month</string>
+    <string name="never">Never</string>
+    <string name="del_stat">Delete all stored statistics now</string>
+    <string name="del_stat_now">By clicking here you will delete all stored statistics you downloaded</string>
 </resources>
