--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -3,13 +3,16 @@
     <string name="app_name">WorldDataBank</string>
     <string name="action_settings">Impostazioni</string>
     <string name="app_description">Con questa applicazione puoi navigare tra vari dati/statistiche e visualizzarne, graficamente, i cambiamenti nel corso degli anni</string>
-    <string name="app_title">World Bank Open Data App</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
-    <string name="nav_header_title">Android Studio</string>
+    <string name="app_title">World Bank Open Data</string>
+    <string name="nav_header_subtitle">La prima app al mondo che ti mostra statistiche su qualsiasi cosa</string>
+    <string name="nav_header_title">World Bank Open Data</string>
     <string name="navigation_drawer_close">Chiudi finestra di navigazione</string>
     <string name="navigation_drawer_open">Apri finestra di navigazione</string>
     <string name="title_activity_plot">PlotActivity</string>
     <string name="title_activity_settings">SettingsActivity</string>
     <string name="welcome">Benvenuto in</string>
     <string name="nav_header_desc">Intestazione di navigazione</string>
+    <string name="choose_info"><![CDATA[(clicca qui per info)\nScegliendo \'Paese —> Argomento —> Indicatore\', puoi richiedere un indicatore specifico partendo dal paese di interesse\n(es. Italy[Italia] —> Economy[Economia] —> GDP[PIL])\n\nScegliendo \'Argomento —> Indicatore —> Paese\', puoi richiedere uno specifico indicatore partendo dall\'argomento di interesse e finendo con il paese\n(es. Economy[Economia] —> GDP[PIL] —> Italy[Italia])]]></string>
+    <string name="english">Inglese</string>
+    <string name="italian">Italiano</string>
 </resources>
